--- a/um3tools_config.h.in
+++ b/um3tools_config.h.in
@@ -1,3 +1,3 @@
-// the configured options and settings for UM3_Tools
-#define UM3_Tools_VERSION_MAJOR @UM3_Tools_VERSION_MAJOR@
-#define UM3_Tools_VERSION_MINOR @UM3_Tools_VERSION_MINOR@
+// the configured options and settings for um3tools
+#define um3tools_VERSION_MAJOR @um3tools_VERSION_MAJOR@
+#define um3tools_VERSION_MINOR @um3tools_VERSION_MINOR@
