Update CMake for Windows compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.16)
 cmake_policy(VERSION 3.9)
 
 project(um3tools VERSION 0.1)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
+set(CPP_VERSION 17)
+
+if(WIN32) # Install dlls in the same directory as the executable on Windows
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+endif()
 
 configure_file(um3tools_config.h.in um3tools_config.h)
 
@@ -10,8 +15,9 @@ add_executable(um3tools um3tools.cpp)
 
 target_include_directories(um3tools PUBLIC "${PROJECT_BINARY_DIR}")
 
-# CPR
 include(FetchContent)
+
+# CPR
 FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/libcpr/cpr.git
                          GIT_TAG 0817715923c9705e68994eb52ef9df3f6845beba) # The commit hash for 1.10.x. Replace with the latest from: https://github.com/libcpr/cpr/releases
 FetchContent_MakeAvailable(cpr)
@@ -39,8 +45,6 @@ FetchContent_MakeAvailable(argparse)
 
 target_link_libraries(um3tools PRIVATE
     cpr::cpr
-    asound
-    pthread
     mx
     nlohmann_json::nlohmann_json
     subprocess
