--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mx"]
-path = third-party/mx
-url = https://github.com/webern/mx.git
+[submodule "third-party/mx"]
+	path = third-party/mx
+	url = https://github.com/webern/mx.git
