--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ project(um3tools VERSION 0.1)
 set(CMAKE_CXX_STANDARD 17)
 set(CPP_VERSION 17)
 
+if(WIN32) # Install dlls in the same directory as the executable on Windows
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+endif()
+
 configure_file(um3tools_config.h.in um3tools_config.h)
 
 add_executable(um3tools um3tools.cpp)
@@ -15,7 +19,7 @@ include(FetchContent)
 
 # CPR
 FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/libcpr/cpr.git
-                         GIT_TAG 0817715923c9705e68994eb52ef9df3f6845beba) # The commit hash for 1.10.x. Replace with the latest from: https://github.com/libcpr/cpr/releases
+                         GIT_TAG 32fd145)
 FetchContent_MakeAvailable(cpr)
 
 # MX
@@ -27,14 +31,13 @@ FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download
 FetchContent_MakeAvailable(json)
 
 # Subprocess
-FetchContent_Declare(subprocess GIT_REPOSITORY https://github.com/arun11299/cpp-subprocess.git GIT_TAG master)
+FetchContent_Declare(subprocess GIT_REPOSITORY https://github.com/arun11299/cpp-subprocess.git
+                                GIT_TAG af23f33)
 FetchContent_MakeAvailable(subprocess)
 
 # Argparse
-FetchContent_Declare(
-    argparse
-    GIT_REPOSITORY https://github.com/p-ranav/argparse.git
-)
+FetchContent_Declare(argparse GIT_REPOSITORY https://github.com/p-ranav/argparse.git
+                                GIT_TAG 557948f)
 FetchContent_MakeAvailable(argparse)
 
 # Linking libraries
